# kazi-agent

./: README.md  directions.md  ideas.txt  issues.txt  main.py  pyproject.toml  requirements.txt  test_snippet.py
cloud/: .dockerignore  Dockerfile  agent_prompt.md  app.py  brain.py  check_available_models.py  deploy.bat  deploy.sh  server.py  tools.py
local/: action.py  action_prototype.ipynb  audio_handler.py  client.py  executor.py  live_integration.py  manager.py  manual_coded_prototype.ipynb  screenshot.ipynb  screenshot.py  screenshot_prototype.ipynb  vision.py
local/live-voice-exp/: live-agent.py
local/misc/: executor.py  manager.py  manual_coded_prototype.ipynb  screenshot_prototype.ipynb
terraform/: main.tf
