[project]
name = "gemini-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "d3dshot>=0.1.3",
    "dasbus>=1.7",
    "fastapi>=0.135.1",
    "google-api-python-client>=2.192.0",
    "google-auth>=2.49.0",
    "google-genai>=1.66.0",
    "keyboard>=0.13.5",
    "mss>=10.1.0",
    "numpy>=2.4.3",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyaudio>=0.2.14",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pynput>=1.8.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "speechrecognition>=3.15.1",
    "uvicorn>=0.41.0",
]
